nav links visiblity fixed

--- a/Frontend/src/CSSComponents/App.css
+++ b/Frontend/src/CSSComponents/App.css
@@ -1,6 +1,7 @@
 .App {
   display: flex;
   flex-direction: row;
+  color:grey;
   /*height: 100vh;*/
 }
 input:focus,
