--- a/Frontend/src/CSSComponents/movies.css
+++ b/Frontend/src/CSSComponents/movies.css
@@ -14,6 +14,8 @@
   flex-direction: column;
   align-items: center;
   padding: 0 0 10vh 0;
+  color:black;
+
 }
 .moviesback > * {
   width: 100%;
